Game module: Add functionality to generate slot, add and update configuration, register and cancel slot, register and update employee game interest